Fix bug in FixtureConstructor stategy